--- a/flask_project/templates/layout.html
+++ b/flask_project/templates/layout.html
@@ -20,19 +20,13 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">Flask</a>
+          <a class="navbar-brand mr-4" href="/">Text Summarizer</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="/">Home</a>
-              <a class="nav-item nav-link" href="/about">About</a>
-            </div>
-            <!-- Navbar Right Side -->
-            <div class="navbar-nav">
-              <a class="nav-item nav-link" href="/login">Login</a>
-              <a class="nav-item nav-link" href="/register">Register</a>
             </div>
           </div>
         </div>
@@ -55,10 +49,9 @@
         </div>
         <div class="col-md-4">
           <div class="content-section">
-            <h3>Our Sidebar</h3>
             <p class='text-muted'>Here's some helpful information about the project.
               <ul class="list-group">
-                <li class="list-group-item list-group-item-light">GitHub</li>
+                <li class="list-group-item list-group-item-light"><a href="https://github.com/MLH-Fellowship/0.5.1-Python-NLP">GitHub</a></li>
               </ul>
             </p>
           </div>
