Improved text field styling, using Raleway font

--- a/flask_project/templates/layout.html
+++ b/flask_project/templates/layout.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     {% if title %}
         <title>Text Summarizer - {{ title }}</title>
@@ -35,27 +36,7 @@
 
     <main role="main" class="container">
       <div class="row">
-        <div class="col-md-8">
-            {% with messages = get_flashed_messages(with_categories=true) %}
-                {% if messages %}
-                    {% for category, message in messages %}
-                        <div class="alert alert-{{ category}}">
-                            {{ message }}
-                        </div>
-                    {% endfor %}
-                {% endif %}
-            {% endwith %}
             {% block content %}{% endblock %}
-        </div>
-        <div class="col-md-4">
-          <div class="content-section">
-            <p class='text-muted'>Here's some helpful information about the project.
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-light"><a href="https://github.com/MLH-Fellowship/0.5.1-Python-NLP">GitHub</a></li>
-              </ul>
-            </p>
-          </div>
-        </div>
       </div>
     </main>
 
