--- a/flask_project/static/main.css
+++ b/flask_project/static/main.css
@@ -1,7 +1,9 @@
 body {
-  background: #fafafa;
+  background: #f1f1f1;
   color: #333333;
   margin-top: 5rem;
+  font-family: 'Raleway', sans-serif;
+  width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -77,4 +79,27 @@ a.article-title:hover {
 
 .account-heading {
   font-size: 2.5rem;
+}
+
+textarea.form-control {
+  font-size: 20px;
+  padding: 15px;
+}
+
+#left-text-area {
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+
+#right-text-area {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+textarea.form-control:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px #535353;
 }
