--- a/flask_project/templates/layout.html
+++ b/flask_project/templates/layout.html
@@ -28,6 +28,7 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="/">Home</a>
+              <a class="nav-item nav-link" href="https://github.com/MLH-Fellowship/0.5.1-Python-NLP" target="_blank">GitHub</a>
             </div>
           </div>
         </div>
@@ -35,9 +36,7 @@
     </header>
 
     <main role="main" class="container">
-      <div class="row">
-            {% block content %}{% endblock %}
-      </div>
+      {% block content %}{% endblock %}
     </main>
 
     <!-- Optional JavaScript -->
