--- a/flask_project/static/main.css
+++ b/flask_project/static/main.css
@@ -87,7 +87,7 @@ a.article-title:hover {
   border-radius: 10px;
 }
 
-#website-go-button {
+.website-go-button {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
