Added Made with Love footer

--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -38,8 +38,6 @@
             </div>
         </div>
     {% endif %}
+    <p class="text-center">Made with ♥ in Africa, Canada, and Italy</p>
 
-<!--     <footer>
-        <p class="footer float-center text-center">Made with ♥ in Africa, Canada, and Italy</p>
-    </footer> -->
 {% endblock content %}
