--- a/flask_project/templates/layout.html
+++ b/flask_project/templates/layout.html
@@ -37,6 +37,7 @@
 
     <main role="main" class="container">
       {% block content %}{% endblock %}
+      <p class="text-center mt-4">Made with ♥ in Africa, Canada, and Italy</p>
     </main>
 
     <!-- Optional JavaScript -->
