Added Microsoft key

--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -29,7 +29,7 @@
             </div>
         </div>
     </form>
-
+    <div id="subscriptionKey" style="display: none;">36e5268307b74c7d83a33fa4d6fd630a</div>
     {% if context and context.summary %}
         <div id="summary-section" class="mt-4 mb-4">
             <h2>Your Summary</h2>
@@ -55,7 +55,6 @@
                 <button type="button" id="startSpeakTextAsyncButton" class="btn btn-outline-secondary float-right mr-2">
                     <i class="fa fa-play" aria-hidden="true"></i>Copy
                 </button>
-
               </div>
             </div>
         </div>
