--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -29,16 +29,17 @@
             </div>
         </div>
     </form>
-    <div id="subscriptionKey" style="display: none;">36e5268307b74c7d83a33fa4d6fd630a</div>
     {% if context and context.summary %}
         <div id="summary-section" class="mt-4 mb-4">
+          <input id="subscriptionKey" type="text" size="40" value="36e5268307b74c7d83a33fa4d6fd630a" hidden>
+          <input id="serviceRegion" type="text" size="40" value="eastus" hidden></td>
             <h2>Your Summary</h2>
             {% if context.minutes_saved %}
                 <p>This {{ context.reduction_percentage }}% text reduction will save you {{ context.minutes_saved }} minutes. Way to go! 🎉</p>
             {% elif context.reduction_percentage %}
                 <p>The text was reduced by {{ context.reduction_percentage }}%. Enjoy the extra time  💖</p>
             {% endif %}
-
+            <textarea id="phraseDiv" style="display: inline-block;width:500px;height:200px" hidden>{{context.summary}}</textarea>
             <div class="card">
               <div class="card-header">
                 Summary
@@ -52,113 +53,111 @@
                     <i class="fa fa-play" aria-hidden="true"></i>Listen
                 </button>
 
-                <button type="button" id="startSpeakTextAsyncButton" class="btn btn-outline-secondary float-right mr-2">
+                <button type="button" id="copyText" class="btn btn-outline-secondary float-right mr-2">
                     <i class="fa fa-play" aria-hidden="true"></i>Copy
                 </button>
               </div>
             </div>
+            <div align="left"><strong>Status:</strong> <span id="resultDiv" class="text-success"></div>
         </div>
     {% endif %}
-{% endblock content %}
+    <!-- <quickstartcode> -->
+<!-- Speech SDK USAGE -->
+<script>
 
- <!-- <quickstartcode> -->
-  <!-- Speech SDK USAGE -->
-  <script>
+  // status fields and start button in UI
+  var phraseDiv;
+  var resultDiv;
+  var startSpeakTextAsyncButton;
 
-    // status fields and start button in UI
-    var phraseDiv;
-    var resultDiv;
-    var startSpeakTextAsyncButton;
+  // subscription key and region for speech services.
+  var subscriptionKey, serviceRegion;
+  var authorizationToken;
+  var SpeechSDK;
+  var synthesizer;
 
-    // subscription key and region for speech services.
-    var subscriptionKey, serviceRegion;
-    var authorizationToken;
-    var SpeechSDK;
-    var synthesizer;
+  document.addEventListener("DOMContentLoaded", function () {
+    startSpeakTextAsyncButton = document.getElementById("startSpeakTextAsyncButton");
+    subscriptionKey = document.getElementById("subscriptionKey");
+    serviceRegion = document.getElementById("serviceRegion");
+    phraseDiv = document.getElementById("phraseDiv");
+    resultDiv = document.getElementById("resultDiv");
 
-    document.addEventListener("DOMContentLoaded", function () {
-      startSpeakTextAsyncButton = document.getElementById("startSpeakTextAsyncButton");
-      subscriptionKey = document.getElementById("subscriptionKey");
-      serviceRegion = document.getElementById("serviceRegion");
-      phraseDiv = document.getElementById("phraseDiv");
-      resultDiv = document.getElementById("resultDiv");
-
-      startSpeakTextAsyncButton.addEventListener("click", function () {
-        var soundContext = undefined;
-        try {
-          var AudioContext = window.AudioContext || window.webkitAudioContext || false;
-          if (AudioContext) {
-            soundContext = new AudioContext();
-          } else {
-            alert("AudioContext not supported");
-          }
-        }
-        catch(e){
-          window.console.log("no sound context found, no audio output. " + e);
-        }
-
-        startSpeakTextAsyncButton.disabled = true;
-
-        // if we got an authorization token, use the token. Otherwise use the provided subscription key
-        var speechConfig;
-        if (authorizationToken) {
-          speechConfig = SpeechSDK.SpeechConfig.fromAuthorizationToken(authorizationToken, serviceRegion.value);
+    startSpeakTextAsyncButton.addEventListener("click", function () {
+      var soundContext = undefined;
+      try {
+        var AudioContext = window.AudioContext || window.webkitAudioContext || false;
+        if (AudioContext) {
+          soundContext = new AudioContext();
         } else {
-          if (subscriptionKey.value === "" || subscriptionKey.value === "subscription") {
-            alert("Please enter your Microsoft Cognitive Services Speech subscription key!");
-            startSpeakTextAsyncButton.disabled = false;
-            return;
-          }
-          speechConfig = SpeechSDK.SpeechConfig.fromSubscription(subscriptionKey.value, serviceRegion.value);
-        }
-
-        synthesizer = new SpeechSDK.SpeechSynthesizer(speechConfig);
-
-        var inputText = phraseDiv.value;
-        synthesizer.speakTextAsync(
-          inputText,
-          function (result) {
-            startSpeakTextAsyncButton.disabled = false;
-            resultDiv.innerHTML = "playing...";
-
-            window.console.log(result);
-            if (result.audioData && soundContext) {
-              var source = soundContext.createBufferSource();
-              soundContext.decodeAudioData(result.audioData, function (newBuffer) {
-                source.buffer = newBuffer;
-                source.connect(soundContext.destination);
-                source.start(0);
-              });
-            }
-
-            synthesizer.close();
-            synthesizer = undefined;
-          },
-          function (err) {
-            startSpeakTextAsyncButton.disabled = false;
-            resultDiv.innerHTML += "Error: ";
-            resultDiv.innerHTML += err;
-            resultDiv.innerHTML += "\n";
-            window.console.log(err);
-
-            synthesizer.close();
-            synthesizer = undefined;
-          });
-      });
-
-      if (!!window.SpeechSDK) {
-        SpeechSDK = window.SpeechSDK;
-        startSpeakTextAsyncButton.disabled = false;
-
-        document.getElementById('content').style.display = 'block';
-        document.getElementById('warning').style.display = 'none';
-
-        // in case we have a function for getting an authorization token, call it.
-        if (typeof RequestAuthorizationToken === "function") {
-          RequestAuthorizationToken();
+          alert("AudioContext not supported");
         }
       }
+      catch(e){
+        window.console.log("no sound context found, no audio output. " + e);
+      }
+
+      startSpeakTextAsyncButton.disabled = true;
+
+      // if we got an authorization token, use the token. Otherwise use the provided subscription key
+      var speechConfig;
+      if (authorizationToken) {
+        speechConfig = SpeechSDK.SpeechConfig.fromAuthorizationToken(authorizationToken, serviceRegion.value);
+      } else {
+        if (subscriptionKey.value === "" || subscriptionKey.value === "subscription") {
+          alert("Please enter your Microsoft Cognitive Services Speech subscription key!");
+          startSpeakTextAsyncButton.disabled = false;
+          return;
+        }
+        speechConfig = SpeechSDK.SpeechConfig.fromSubscription(subscriptionKey.value, serviceRegion.value);
+      }
+
+      synthesizer = new SpeechSDK.SpeechSynthesizer(speechConfig);
+
+      var inputText = phraseDiv.value;
+      synthesizer.speakTextAsync(
+        inputText,
+        function (result) {
+          startSpeakTextAsyncButton.disabled = false;
+          resultDiv.innerHTML = "playing...";
+
+          window.console.log(result);
+          if (result.audioData && soundContext) {
+            var source = soundContext.createBufferSource();
+            soundContext.decodeAudioData(result.audioData, function (newBuffer) {
+              source.buffer = newBuffer;
+              source.connect(soundContext.destination);
+              source.start(0);
+            });
+          }
+
+          synthesizer.close();
+          synthesizer = undefined;
+        },
+        function (err) {
+          startSpeakTextAsyncButton.disabled = false;
+          resultDiv.innerHTML += "Error: ";
+          resultDiv.innerHTML += err;
+          resultDiv.innerHTML += "\n";
+          window.console.log(err);
+
+          synthesizer.close();
+          synthesizer = undefined;
+        });
     });
 
+    if (!!window.SpeechSDK) {
+      SpeechSDK = window.SpeechSDK;
+      startSpeakTextAsyncButton.disabled = false;
 
-  </script>
+      document.getElementById('content').style.display = 'block';
+      document.getElementById('warning').style.display = 'none';
+
+      // in case we have a function for getting an authorization token, call it.
+      if (typeof RequestAuthorizationToken === "function") {
+        RequestAuthorizationToken();
+      }
+    }
+  });
+</script>
+{% endblock content %}
