--- a/flask_project/static/main.css
+++ b/flask_project/static/main.css
@@ -120,11 +120,12 @@ textarea.form-control {
 }
 
 .footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
 }
 
 small {
