Font awesome icons are now displayed correctly (imported correct CDN)

--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -53,11 +53,11 @@
                 </blockquote>
 
                 <button type="button" id="startSpeakTextAsyncButton" class="btn btn-primary float-right">
-                    <i class="fa fa-play" aria-hidden="true"></i>Listen
+                    <i class="fa fa-play" aria-hidden="true"></i> Listen
                 </button>
 
                 <button type="button" id="copyText" class="btn btn-outline-secondary float-right mr-2">
-                    <i class="fa fa-play" aria-hidden="true"></i>Copy
+                    <i class="fa fa-copy" aria-hidden="true"></i> Copy
                 </button>
               </div>
             </div>
