--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
     <h2>What would you like to summarize?</h2>
+    <div id="buttons">
+        <button id="exampleButton1" type="button" class="btn btn-outline-secondary float-left">Try an Example</button>
+    </div>
     <div id="textarea-group">
         <form method="POST" action="">
             {{ text_form.hidden_tag() }}
@@ -13,10 +16,10 @@
                     {% endfor %}
                 </div>
             {% else %}
-                {{ text_form.text(class="form-control", placeholder="Enter Website URL", placeholder="Type or place English text to summarize here.") }}
+                {{ text_form.text(id="textToSum", class="form-control", placeholder="Enter Website URL", placeholder="Type or place English text to summarize here.") }}
             {% endif %}
 
-            {{ text_form.submit(class="btn btn-primary mt-2") }}
+            {{ text_form.submit(id="submitButton", class="btn btn-primary mt-2") }}
         </form>
     </div>
     <div class="hr-sect">OR</div>
@@ -69,6 +72,9 @@
   var phraseDiv;
   var resultDiv;
   var startSpeakTextAsyncButton;
+  var populateExampleFromButton;
+  var textToSummarize;
+  var textSubmissionButton;
 
   // subscription key and region for speech services.
   var subscriptionKey, serviceRegion;
@@ -78,10 +84,30 @@
 
   document.addEventListener("DOMContentLoaded", function () {
     startSpeakTextAsyncButton = document.getElementById("startSpeakTextAsyncButton");
+    populateExampleFromButton = document.getElementById("exampleButton1");
+    textToSummarize = document.getElementById("textToSum");
+    textSubmissionButton = document.getElementById("submitButton")
     subscriptionKey = document.getElementById("subscriptionKey");
     serviceRegion = document.getElementById("serviceRegion");
     phraseDiv = document.getElementById("phraseDiv");
     resultDiv = document.getElementById("resultDiv");
+
+    populateExampleFromButton.addEventListener("click", function () {
+        console.log("example button pressed");
+        textToSummarize.value = "European scientists think they can now describe with confidence what's driving the drift of the North Magnetic Pole. \
+It's shifted in recent years away from Canada towards Siberia. And this rapid movement has required more frequent updates to navigation systems,\
+including those that operate the mapping functions in smartphones. A team, led from Leeds University, says the behaviour is explained by the competition \
+of two magnetic \"blobs\" on the edge of the Earth's outer core. Changes in the flow of molten material in the planet's interior have altered the strength\
+of the above regions of negative magnetic flux. \"This change in the pattern of flow has weakened the patch under Canada and ever so slightly increased \
+the strength of the patch under Siberia,\" explained Dr Phil Livermore. \"This is why the North Pole has left its historic position over the Canadian Arctic\
+and crossed over the International Date Line. Northern Russia is winning the \'tug of war\', if you like,\" he told BBC News.Earth has three poles at the \
+top of the planet. A geographic pole which is where the planet's rotation axis intersects the surface. The geomagnetic pole is the location which best fits a \
+classic dipole (its position alters little). And then there is the North Magnetic, or dip, Pole, which is where field lines are perpendicular to the surface.\
+It is this third pole that has been doing all the movement. When first identified by explorer James Clark Ross in the 1830s, it was in Canada's Nunavut territory.\
+Back then it didn't wander very far, very fast. But in the 1990s, it took off, racing to ever higher latitudes and crossing the date line in late 2017. \
+In the process, it came to within just a few hundred kilometres of the geographic pole.";
+        textSubmissionButton.click();
+    });
 
     startSpeakTextAsyncButton.addEventListener("click", function () {
       var soundContext = undefined;
