Added padding to example button

--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h2>What would you like to summarize?</h2>
     <div id="buttons">
-        <button id="exampleButton1" type="button" class="btn btn-outline-secondary float-left">Try an Example</button>
+        <button id="exampleButton1" type="button" class="btn btn-outline-secondary float-left example-button">Try an Example</button>
     </div>
     <div id="textarea-group">
         <form method="POST" action="">
